--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-Jonathan Mireau# EditorConfig is awesome: https://EditorConfig.org
+# K-Jonathan M.L. EditorConfig is awesome: https://EditorConfig.org
 
 # top-most EditorConfig file
 root = true
